src/test/deca/test_compilateur/context/invalid/created/acces_field/field_protected_not_extends_exp.deca
// Description :
//    acces à un field protegé, le meme field public existe dans une super class
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 14 :(3.65) L’attribut est protégé

class A{
protected int x;
}

class B {
void met(A a){
a.x;}
}